<resources>
    <string name="app_name">LaraMoviesAndroid</string>
    <!--    film-related strings-->
    <string name="film_title_label">Title</string>
    <string name="release_date_label">Release Date</string>
    <string name="duration_label_edit">Duration(Minutes)</string>
    <string name="duration_label">Duration</string>
    <string name="story_label">Story</string>
    <string name="film_poster_description">Film Poster</string>
    <string name="film_genre_label">Genre</string>
    <string name="text_view_text_placeholder">Lorem ipsum</string>
    <string name="additional_info_label">Additional Info</string>
    <string name="film_actors_label">Cast</string>
    <string name="film_producers_label">Producers</string>

    <!--actor related strings-->
    <string name="actor_portrait_description">Actor portrait</string>
    <string name="actor_name_label">Name</string>
    <string name="actor_notes_label">Notes </string>
    <string name="actor_name_placeholder">@string/actor_name_label</string>
    <string name="actor_notes_placeholder">Additional information about the actor</string>
    <string name="filmography_label">Filmography</string>
    <string name="in">---</string>
    <string name="character_label">Character Name</string>
    <string name="portrait_dimen_tip">We recommend uploading to 8:10 ratio for best results</string>

    <!--    producer related strings-->
    <string name="producer_name_label">Producer</string>
    <string name="producer_email_label">Email</string>
    <string name="producer_website_label">Website</string>
    <string name="producer_website_hint">https://example.com</string>


    <string name="choose_image_label">Choose Image</string>
    <!--    CRUD command button texts-->
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string name="api_url">http://192.168.100.201:8000/api/</string>


    <!--    labels-->
    <string name="films">Films</string>
    <string name="actors">Actors</string>
    <string name="producers">Producers</string>
    <string name="logout">Logout</string>

    <!--    login activity-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="name_label">Name</string>
    <string name="remember_label">Remember me</string>
    <string name="email_hint">example@mail.com</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_label">Confirm Password</string>


    <string name="delete_dialog_prepend">Are you sure you want to delete </string>
    <string name="delete_actor_title">Delete Actor</string>
    <!--    actions -->
    <string name="actions_title">Select an Action</string>
    <string-array name="item_actions">
        <item>@string/edit</item>
        <item>@string/delete</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    action bar titles-->
    <string name="main_menu_title">@string/app_name</string>
    <string name="actor_list_title">Actors</string>
    <string name="actor_edit_title">Edit Actor</string>
    <string name="actor_add_title">Add Actor</string>
    <string name="film_list_title">Films</string>
    <string name="film_edit_title">Edit Films</string>
    <string name="film_add_title">Add a FIlm</string>
    <string name="producer_list_title">Producers</string>
    <string name="producer_edit_title">Edit Producer</string>
    <string name="producer_add_title">Add a Producer</string>
    <string name="actor">Actor</string>
    <string name="add_actor_film_addeditactor">Add/Edit Actor Film For--</string>
    <string name="as">as</string>
    <string name="add_producer">Add Producer</string>
    <string name="add_actor">Add Actor</string>
    <string name="available_producers">Available Producers</string>
</resources>