<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".producers.ProducerFormFragment">

    <TextView
        android:id="@+id/text_producer_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/producer_name_label"
        app:layout_constraintBottom_toBottomOf="@+id/edit_producer_form_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_producer_form_name"
        app:drawableStartCompat="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/edit_producer_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/producer_name_label"
        android:inputType="textPersonName"
        android:padding="@dimen/default_padding"
        app:layout_constraintStart_toEndOf="@+id/text_producer_form_name"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_producer_form_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/producer_email_label"
        app:layout_constraintBottom_toBottomOf="@+id/edit_producer_form_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_producer_form_email"
        app:drawableStartCompat="@drawable/baseline_email_24" />

    <EditText
        android:id="@+id/edit_producer_form_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/default_padding"
        app:layout_constraintStart_toEndOf="@+id/text_producer_form_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_producer_form_name"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/producer_website_label"
        app:layout_constraintBottom_toBottomOf="@+id/edit_producer_form_website"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_producer_form_website"
        app:drawableStartCompat="@drawable/baseline_public_24" />

    <EditText
        android:id="@+id/edit_producer_form_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/producer_website_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/default_padding"
        app:layout_constraintStart_toStartOf="@+id/edit_producer_form_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_producer_form_email"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_producer_form_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/button_producer_form_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_producer_form_website" />

    <Button
        android:id="@+id/button_producer_form_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_producer_form_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_producer_form_submit"
        app:layout_constraintTop_toTopOf="@+id/button_producer_form_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>