<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_film_actors_item_actor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/my_list_item_default_padding"
        android:text="@string/actor_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/my_list_item_default_padding"
        android:text="@string/as"
        app:layout_constraintStart_toEndOf="@+id/text_film_actors_item_actor_name"
        app:layout_constraintTop_toTopOf="@+id/text_film_actors_item_actor_name" />

    <TextView
        android:id="@+id/text_film_actors_item_character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/my_list_item_default_padding"
        android:text="@string/character_label"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>