<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actors.ActorEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_actor_edit_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:layout_constraintEnd_toStartOf="@+id/button_actor_edit_cancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_actor_edit_filmography" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/portrait_dimen_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_actor_edit_choose_portrait" />

            <ImageView
                android:id="@+id/image_actor_edit_portrait"
                android:layout_width="352dp"
                android:layout_height="440dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@android:string/fingerprint_icon_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:src="@tools:sample/backgrounds/scenic" />

            <Button
                android:id="@+id/button_actor_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_actor_edit_submit"
                app:layout_constraintTop_toBottomOf="@+id/rv_actor_edit_filmography" />

            <TextView
                android:id="@+id/text_actor_edit_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/actor_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_actor_edit_name" />

            <TextView
                android:id="@+id/text_actor_edit_portrait_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/actor_portrait_description"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_actor_edit_choose_portrait" />

            <TextView
                android:id="@+id/text_actor_edit_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/actor_notes_label"
                app:layout_constraintBottom_toBottomOf="@+id/input_actor_edit_notes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_actor_edit_notes" />

            <EditText
                android:id="@+id/input_actor_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/actor_name_placeholder"
                android:inputType="textPersonName"
                android:padding="@dimen/default_padding"
                app:layout_constraintStart_toEndOf="@+id/text_actor_edit_name_label"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_actor_edit_choose_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:text="@string/choose_image_label"
                app:layout_constraintStart_toEndOf="@+id/text_actor_edit_portrait_label"
                app:layout_constraintTop_toBottomOf="@+id/input_actor_edit_name" />

            <EditText
                android:id="@+id/input_actor_edit_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/actor_notes_placeholder"
                android:inputType="textMultiLine"
                android:padding="@dimen/default_padding"
                app:layout_constraintStart_toEndOf="@+id/text_actor_edit_notes_label"
                app:layout_constraintTop_toBottomOf="@+id/image_actor_edit_portrait" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actor_edit_filmography"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/input_actor_edit_notes"
                tools:layout_editor_absoluteX="198dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_actor_edit_add_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="@dimen/default_padding"
        android:src="@drawable/baseline_movie_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>